# code-checks-rs

./: Cargo.toml  README.md
src/: check_error.rs  lib.rs
src/checks/: check.rs  check_async_for_task.rs  check_no_todos_in_commited_code.rs  mod.rs
src/contexts/: check_context.rs  directory_context.rs  file_context.rs  git_context.rs  mod.rs
src/filters/: check_filter.rs  mod.rs
