[package]
name = "code-checks-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
annotate-snippets = "0.11.1"
anstream = "0.6.13"
csharp-tree-sitter-utils-rs = { git = "https://github.com/daniu54/csharp-tree-sitter-utils-rs" }
owo-colors = "4.0.0"

[dev-dependencies]
annotate-snippets = { version = "0.11.1", features = ["testing-colors"] }
regex = "1.10.4"


[build-dependencies]
cc = "*"
