[package]
name = "code-checks-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
annotate-snippets = "0.11.1"
anstream = "0.6.13"
csharp-tree-sitter-utils-rs = { git = "https://github.com/daniu54/csharp-tree-sitter-utils-rs" }
git2-extensions = { git = "https://github.com/daniu54/git2-extensions" }
owo-colors = "4.0.0"
regex = "1.10.4"

[dev-dependencies]
annotate-snippets = { version = "0.11.1", features = ["testing-colors"] }


[build-dependencies]
cc = "*"
